NXP-28585: setup coldstorage for 10.10